--- a/src/Pokemon.module.css
+++ b/src/Pokemon.module.css
@@ -1,5 +1,32 @@
-.pokemon >li{
-     display: flex;
+.pokemon {
+  max-width: 520px;
+  margin: 1rem auto;
+  padding: 1rem;
+  font-family: sans-serif;
+  line-height: 1.5;
 }
-.name, .id {
+
+.pokemon h2 {
+  margin: 0 0 0.5rem;
+  text-transform: capitalize;
+}
+
+.pokemon img {
+  width: 96px;
+  height: 96px;
+}
+
+.pokemon h3 {
+  margin: 0.8rem 0 0.3rem;
+  font-size: 1rem;
+}
+
+.pokemon ul {
+  margin: 0;
+  padding-left: 1.2rem;
+}
+
+.moves {
+  max-height: 10rem;
+  overflow: auto;
 }
