--- a/src/Pokemon.module.css
+++ b/src/Pokemon.module.css
@@ -6,6 +6,28 @@
   line-height: 1.5;
 }
 
+.search {
+  display: flex;
+  gap: 0.5rem;
+  margin-bottom: 0.8rem;
+}
+
+.input {
+  flex: 1;
+  min-width: 0;
+  padding: 0.35rem 0.45rem;
+  font: inherit;
+}
+
+.search button {
+  padding: 0.35rem 0.55rem;
+  font: inherit;
+}
+
+.status {
+  margin: 0 0 0.5rem;
+}
+
 .pokemon h2 {
   margin: 0 0 0.5rem;
   text-transform: capitalize;
